--- a/generos/ciencia ficcion/cinecia ficcion.css
+++ b/generos/ciencia ficcion/cinecia ficcion.css
@@ -832,7 +832,7 @@ body{
 .grid-container{
 	display: grid;
 	grid-template-columns: 180px 180px 180px;
-	grid-template-rows: 290px 290px;
+	grid-template-rows: 290px 290px 290px 290px;
 	margin-top: 15px;
 	grid-column-gap: 15px;
 	grid-row-gap: 5px; 
@@ -848,7 +848,7 @@ body{
 	
 }
 
-.new-1, .new-2, .new-3, .new-4, .new-5, .new-6, .new-7, .new-8, .new-9{
+.new-1, .new-2, .new-3, .new-4, .new-5, .new-6, .new-7, .new-8, .new-9, .new-10, .new-11, .new-12, .new-13, .new-14, .new-15{
 		width: 100%;
 		height: 90%;
 	}
@@ -864,7 +864,7 @@ body{
 		border-radius: 5px;
 	}
 
-	.img-poster-1, .img-poster-2, .img-poster-3, .img-poster-4, .img-poster-5,  .img-poster-6, .img-poster-7, .img-poster-8, .img-poster-9{
+	.img-poster-1, .img-poster-2, .img-poster-3, .img-poster-4, .img-poster-5,  .img-poster-6, .img-poster-7, .img-poster-8, .img-poster-9, .img-poster-10, .img-poster-11, .img-poster-12, .img-poster-13, .img-poster-14, .img-poster-15{
 		width: 100%;
 		height: 100%;
 		background: linear-gradient(70deg, #000, #a00);
@@ -918,7 +918,7 @@ body{
 	}
 
 	/*OPACAR*/
-	.opacar .src-poster-1, .opacar .src-poster-2, .opacar .src-poster-3, .opacar .src-poster-4, .opacar .src-poster-5, .opacar .src-poster-6, .opacar .src-poster-7, .opacar .src-poster-8, .opacar .src-poster-9{
+	.opacar .src-poster-1, .opacar .src-poster-2, .opacar .src-poster-3, .opacar .src-poster-4, .opacar .src-poster-5, .opacar .src-poster-6, .opacar .src-poster-7, .opacar .src-poster-8, .opacar .src-poster-9, .opacar .src-poster-10, .opacar .src-poster-11, .opacar .src-poster-12, .opacar .src-poster-13, .opacar .src-poster-14, .opacar .src-poster-15{
 		animation: oscurecer .6s forwards;
 		cursor: pointer;
 		border: 2px solid #fff;
@@ -937,7 +937,7 @@ body{
 
 
 	/*ITEMS OCULTOS DEL GRID*/
-	.item, .item-2, .item-3, .item-4, .item-5, .item-6, .item-7, .item-8, .item-9{
+	.item, .item-2, .item-3, .item-4, .item-5, .item-6, .item-7, .item-8, .item-9, .item-10, .item-11, .item-12, .item-13, .item-14, .item-15{
 		display: none;
 		margin-top: -300px;
 		position: relative;
@@ -949,13 +949,13 @@ body{
 		
 	}
 
-	.item-animacion, .item-animacion-2, .item-animacion-3, .item-animacion-4, .item-animacion-5, .item-animacion-6, .item-animacion-7, .item-animacion-8, .item-animacion-9{
+	.item-animacion, .item-animacion-2, .item-animacion-3, .item-animacion-4, .item-animacion-5, .item-animacion-6, .item-animacion-7, .item-animacion-8, .item-animacion-9, .item-animacion-10, .item-animacion-11, .item-animacion-12, .item-animacion-13, .item-animacion-14, .item-animacion-15{
 		display: block;
 		animation: agrandar .3s forwards;
 		animation-timing-function: ease-in-out;
 	}
 
-	.item p, .item-2 p, .item-3 p, .item-4 p, .item-5 p, .item-6 p, .item-7 p, .item-8 p, .item-9 p{
+	.item p, .item-2 p, .item-3 p, .item-4 p, .item-5 p, .item-6 p, .item-7 p, .item-8 p, .item-9 p, .item-10 p, .item-11 p, .item-12 p, .item-13 p, .item-14 p, .item-15 p{
 		transform: translateY(-180px);
 		color: #ddd;
 		line-height: 1.3;
@@ -965,16 +965,16 @@ body{
 		padding: 10px 10px;
 	}
 
-	.item h3, .item-2 h3, .item-3 h3, .item-4 h3, .item-5 h3, .item-6 h3, .item-7 h3, .item-8 h3, .item-9 h3{
+	.item h3, .item-2 h3, .item-3 h3, .item-4 h3, .item-5 h3, .item-6 h3, .item-7 h3, .item-8 h3, .item-9 h3, .item-10 h3, .item-11 h3, .item-12 h3, .item-13 h3, .item-14 h3, .item-15 h3{
 		margin-bottom: 1px;
 		font-size: 11px;
 		color: #fff;
 	}
 
-	.item b, .item-2 b, .item-3 b, .item-4 b, .item-5 b, .item-6 b, .item-7 b, .item-8 b, .item-9 b{
+	.item b, .item-2 b, .item-3 b, .item-4 b, .item-5 b, .item-6 b, .item-7 b, .item-8 b, .item-9 b, .item-10 b, .item-11 b, .item-12 b, .item-13 b, .item-14 b, .item-15 b{
 		color: #fff;
 	}
-	.item img, .item-2 img, .item-3 img, .item-4 img, .item-5 img, .item-6 img, .item-7 img, .item-8 img, .item-9 img{
+	.item img, .item-2 img, .item-3 img, .item-4 img, .item-5 img, .item-6 img, .item-7 img, .item-8 img, .item-9 img, .item-10 img, .item-11 img, .item-12 img, .item-13 img, .item-14 img, .item-15 img{
 		width: 100%;
 		height: 100%;
 		border: none;
@@ -1010,15 +1010,13 @@ body{
 		}
 	}
 
-
-
 .parrafo-final{
 	
 	border-left: 1px solid #400;
 	padding: 5px;
 	margin-left: 100px;
 	width: 575px;
-	transform: translateY(-1670px);
+	transform: translateY(-1070px);
 }
 
 .parrafo-final p{
@@ -1528,7 +1526,7 @@ body{
 
 		.grid-container{
 			grid-template-columns: 250px 250px 250px;
-			grid-template-rows: 380px 380px;
+			grid-template-rows: 380px 380px 380px 380px;
 			margin-top: 20px;
 			grid-column-gap: 30px;
 			grid-row-gap: 30px; 
@@ -1538,12 +1536,12 @@ body{
 			width: 250px;
 			height: 100%;
 		}
-		.img-poster-1, .img-poster-2, .img-poster-3, .img-poster-4, .img-poster-5,  .img-poster-6, .img-poster-7, .img-poster-8, .img-poster-9{
+		.img-poster-1, .img-poster-2, .img-poster-3, .img-poster-4, .img-poster-5,  .img-poster-6, .img-poster-7, .img-poster-8, .img-poster-9, .img-poster-10, .img-poster-11, .img-poster-12, .img-poster-13, .img-poster-14, .img-poster-15{
 			width: 100%;
 			height: 100%;
 		}
 	.div-icon-video{
-		transform: translateY(-150px);
+		transform: translateY(-200px);
 	}
 	.div-icon-video img{
 		width: 45px;
@@ -1558,6 +1556,80 @@ body{
 	.div-href a{
 		padding: 2px 5px;
 		font-size: 18px;
+	}
+
+	
+	.container-siguiente{
+		margin-left: 305px;
+	}
+
+	/*ITEMS OCULTOS DEL GRID*/
+	.item, .item-2, .item-3, .item-4, .item-5, .item-6, .item-7, .item-8, .item-9, .item-10, .item-11, .item-12, .item-13, .item-14, .item-15{
+		margin-top: -380px;
+		position: relative;
+		z-index: 350;
+		border-radius: 5px;
+		width: 320px;
+		height: 210px;
+		border: 1px solid #400;
+		
+	}
+
+	.item-animacion, .item-animacion-2, .item-animacion-3, .item-animacion-4, .item-animacion-5, .item-animacion-6, .item-animacion-7, .item-animacion-8, .item-animacion-9, .item-animacion-10, .item-animacion-11, .item-animacion-12, .item-animacion-13, .item-animacion-14, .item-animacion-15{
+		animation: agrandar .3s forwards;
+		animation-timing-function: ease-in-out;
+	}
+
+	.item p, .item-2 p, .item-3 p, .item-4 p, .item-5 p, .item-6 p, .item-7 p, .item-8 p, .item-9 p, .item-10 p, .item-11 p, .item-12 p, .item-13 p, .item-14 p, .item-15 p{
+		transform: translateY(-210px);
+		color: #ddd;
+		line-height: 1.3;
+		font-family: verdana;
+		font-size: 11px;
+		text-align: left;
+		padding: 10px 10px;
+	}
+
+	.item h3, .item-2 h3, .item-3 h3, .item-4 h3, .item-5 h3, .item-6 h3, .item-7 h3, .item-8 h3, .item-9 h3, .item-10 h3, .item-11 h3, .item-12 h3, .item-13 h3, .item-14 h3, .item-15 h3{
+		margin-bottom: 1px;
+		font-size: 12px;
+		color: #fff;
+	}
+
+	
+	.item img, .item-2 img, .item-3 img, .item-4 img, .item-5 img, .item-6 img, .item-7 img, .item-8 img, .item-9 img, .item-10 img, .item-11 img, .item-12 img, .item-13 img, .item-14 img, .item-15 img{
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		filter: brightness(.5) !important;
+		border-radius: 5px;
+	}
+
+	.item-2, .item-5, .item-8, .item-11, .item-14{
+		margin-left: 260px;
+	}
+
+	.item-3, .item-6, .item-9, .item-12, .item-15{
+		margin-left: 260px;
+	}
+
+	.item, .item-4, .item-7, .item-10, .item-13{
+		margin-left: 260px;
+	}
+
+	@keyframes agrandar {
+		0%{
+			left: 0;
+		}
+
+		80%{
+			transform: scale(1.15);
+		}
+
+		100%{
+			transform: scale(1.1);
+			
+		}
 	}
 
 	
@@ -1652,7 +1724,7 @@ body{
 			margin-left: 150px;
 			width: 830px;
 			font-size: 20px;
-			transform: translateY(-1950px);
+			transform: translateY(-1200px);
 		}
 		
 		
@@ -1907,7 +1979,7 @@ body{
 		.grid-container{
 			display: grid;
 			grid-template-columns: 140px 140px 140px;
-			grid-template-rows: 240px 240px;
+			grid-template-rows: 240px 240px 240px 240px;
 			
 		}
 
@@ -1915,7 +1987,7 @@ body{
 			font-size: 11px;
 		}
 
-		.item, .item-2, .item-3, .item-4, .item-5, .item-6, .item-7, .item-8, .item-9{
+		.item, .item-2, .item-3, .item-4, .item-5, .item-6, .item-7, .item-8, .item-9, .item-10, .item-11, .item-12, .item-13, .item-14, .item-15{
 		
 		margin-top: -257px;
 		
@@ -1942,7 +2014,7 @@ body{
 			margin-left: 80px;
 			width: 440px;
 			font-size: 13px;
-			transform: translateY(-1000px);
+			transform: translateY(-1300px);
 		}
 		.titulo-aside a{
 			
@@ -2651,7 +2723,7 @@ body{
 		.grid-container{
 			display: grid;
 			grid-template-columns: 115px 115px 115px;
-			grid-template-rows: 175px 175px;
+			grid-template-rows: 175px 175px 175px 175px;
 			margin-top: 15px;
 			grid-column-gap: 20px;
 			grid-row-gap: 53px; 
@@ -2871,7 +2943,7 @@ body{
 		.grid-container{
 			display: grid;
 			grid-template-columns: 110px 110px 110px;
-			grid-template-rows: 160px 160px;
+			grid-template-rows: 160px 160px 160px 160px;
 			margin-top: 15px;
 			grid-column-gap: 20px;
 			grid-row-gap: 50px; 
@@ -2980,7 +3052,7 @@ body{
 				width: 100vw;
 				padding-left: 11px;
 				grid-row-gap: 35px; 
-				grid-template-rows: 165px 165px;
+				grid-template-rows: 165px 165px 165px 165px;
 
 			}
 			.grid-container a{
@@ -3217,7 +3289,7 @@ body{
 				grid-column-gap: 10px; 
 				grid-row-gap: 35px; 
 				grid-template-columns: 100px 100px 100px;
-				grid-template-rows: 160px 160px;
+				grid-template-rows: 160px 160px 160px 160px;
 				width: 100vw;
 				padding-left: 14px;
 
@@ -3362,7 +3434,7 @@ body{
 				grid-column-gap: 10px; 
 				grid-row-gap: 35px; 
 				grid-template-columns: 95px 95px 95px;
-				grid-template-rows: 155px 155px;
+				grid-template-rows: 155px 155px 155px 155px;
 				width: 100vw;
 				padding-left: 0px;
 
