--- a/animes/my hero academia/my hero academia 6.css
+++ b/animes/my hero academia/my hero academia 6.css
@@ -1095,6 +1095,18 @@ body{
 }
 
 
+.parrafo-manga{
+	font-size: 14px;
+	border-left: 2px solid #900;
+	padding: 5px;
+	margin-bottom: 30px;
+}
+
+.parrafo-manga p{
+	font-family: kaushan Script, verdana;
+}
+
+
 
 /*FOOTER*/
 .footer{
@@ -1205,7 +1217,7 @@ body{
 			margin-left: 295px;
 		}
 		.ventana-fixed{
-			transform: translateY(-1060px);
+			transform: translateY(-1061px);
 		}
 
 		.ventana-1{
@@ -1596,6 +1608,13 @@ body{
 			font-size: 20px;
 			transform: translateY(-100px);
 		}
+
+
+.parrafo-manga{
+	font-size: 20px;
+	
+}
+
 		
 		
 		.footer{
